--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
 PORT=1337
 API_KEY=keyboardcat
-DATABASE_URL=mongodb://localhost/travel-log
+DATABASE_URL=mongodb://localhost/travel
 CORS_ORIGIN=http://localhost:3000
